2015-09-11 Franz Holzinger <franz@ttproducts.de>
	* bug fix: The modified dataArray must be stored internally.
	* bug fix: The saved checkbox value for the acknowledged terms did not get stored.

2015-09-10 Franz Holzinger <franz@ttproducts.de>
	* bug fix: deletion of image. The Javascript onsubmit function of the deletion image input field loses the field name called submit_delete. Write a new Javascript function to have also fewer code.
	* bug fix: show TCA type check correctly in the preview and save it as a bit field integer

2015-08-15 Franz Holzinger <franz@ttproducts.de>
	* bug fix: The password command after INVITE must not modify any of the other fields. There is no uncheck of a checkbox in this case.
	* bug fix: the field list must be determined before modifyRow

2015-07-17 Franz Holzinger <franz@ttproducts.de>
	* bug fix: forgotten parameter 2 for method addPasswordTransmissionMarkers
	* change: set uploadFolder to fileadmin/user_uploads for TYPO3 6.2

2015-07-08 Franz Holzinger <franz@ttproducts.de>
	* bug fix: select box id must use the field name as a part of it
	* bug fix: do not clear the session password for autologin on create
	* change: do not exit in the inside of the login function
	* fix bug #67629: RSA authentification for TYPO3 6.2

2015-05-20 Franz Holzinger <franz@ttproducts.de>
	* bug fix: invite must set enableAutoLoginOnInviteConfirmation for auto login

2015-05-15 Franz Holzinger <franz@ttproducts.de>
	* bug fix: no PHP warning message for wrong array indices - illegal string offset
	* add method generateHash to generate a hash from a parameter array
	* bug fix: invite and delete

2015-04-30 Franz Holzinger <franz@ttproducts.de>
	* bug #65141: workaround for the EM in the TYPO3 backend

2015-04-21 Franz Holzinger <franz@ttproducts.de>
	* bug fix: wrong call for hook registrationProcess_beforeSaveDelete
	* bug fix: the original internal array must never be changeable

2015-02-28 Franz Holzinger <franz@ttproducts.de>