@@ -1,3 +1,7 @@
+2015-10-17 Franz Holzinger <franz@ttproducts.de>
+	* bug fix: Build a loop over all login methods until salted passwords are supported.
+	* bug fix: do not skip the preview before a deletion
+
 2015-09-11 Franz Holzinger <franz@ttproducts.de>
 	* bug fix: The modified dataArray must be stored internally.
 	* bug fix: The saved checkbox value for the acknowledged terms did not get stored.
